Tests/CompilerTests/negative/illegal-nested-yield.diagnostics.expected
negative/illegal-nested-yield.hylo:8.7: error: subscript cannot project more than once
      yield true
      ^
negative/illegal-nested-yield.hylo:4.3: note: value already projected here
  yield false
  ^
